# idgen

./: .gitignore  LICENSE  README.md  go.mod  idgen.go
cgo/: idgen_capi.go
python/: CMakeLists.txt  build.sh  idgen_pybind.cpp  smoke_test.py
tests/: docid_test.go
